k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: meigen-generator
  labels:
    app: meigen-generator
    version: "1.0"
spec:
  selector:
    matchLabels:
      app: meigen-generator
  replicas: 1
  template:
    metadata:
      labels:
        app: meigen-generator
        version: "1.0"
    spec:
      containers:
        - name: meigen-generator
          image: quay.io/yu_yamanaka_ibm/meigen-generator:latest
          resources:
            requests:
              memory: "2Gi"
              cpu: "1"
            limits:
              memory: "2Gi"
              cpu: "1"
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          env: # TODO: Add your environment variables here
            - name: APP_API_KEY
              value: xxxx
            - name: APP_PROJECT_ID
              value: xxxx
