k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: meigen-generator-service
  labels:
    app: meigen-generator-service
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: meigen-generator
  type: ClusterIP
